--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.101Z",
-        "lastAccessed": "2025-09-29T12:02:14.106Z"
+        "creation": "2025-09-29T13:11:33.197Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
     },
     {
         "key": "sb",
@@ -14,26 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x800",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
     },
     {
         "key": "c_user",
@@ -59,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
     },
     {
         "key": "xs",
@@ -68,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
-    },
-    {
-        "key": "fr",
-        "value": "0Bdzo2hEzMftHMa8L.AWfwS_DEvjTkEsFWnalOMAs8DVIxI2X3vH3TQRMgeBIc3EBGXMI.Bo2mnE..AAA.0.0.Bo2nRN.AWdDY0JqOAlG7lSn_-XMxGxjPUc",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
     },
     {
         "key": "locale",
@@ -86,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
     },
     {
         "key": "pas",
@@ -95,26 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2937%3Btimestamp%3A1759147085",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100423558%3BT%3A29319118",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
     },
     {
         "key": "vpd",
@@ -122,7 +77,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-29T12:02:14.107Z",
-        "lastAccessed": "2025-09-29T12:02:14.107Z"
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
+    },
+    {
+        "key": "fr",
+        "value": "0Bdzo2hEzMftHMa8L.AWdEbl1ig15NXRpDeKbIln9EzZCZak8irX8ic-YgqEyFVrR0seU.Bo2mnE..AAA.0.0.Bo2oV7.AWdkWoy2xPAJm7ypovdLp_ywq20",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100433327%3BT%3A29319191",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2937%3Btimestamp%3A1759151483",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-29T13:11:33.198Z",
+        "lastAccessed": "2025-09-29T13:11:33.198Z"
     }
 ]
